add address of gkv

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     <div class="about">
       <h2>Hello!</h2>
-      <p>Hi, I am <b>Ujjwal Raj</b>, a software engineering student at Gurukul Kangiri University in Haridwar, India,
+      <p>Hi, I am <b>Ujjwal Raj</b>, a software engineering student at FET, Gurukul Kangiri at Haridwar, Uttrakhand, India,
         passionate about AI-DS, web development, programming, and emerging technologies.</p>
 
       <div class="contact">
